# rust-demo

./: .env  Cargo.toml  README.md  api.http
config/: application.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_users.rs  m20220213_102936_add_age_to_users.rs  m20220213_183618_create_cars.rs  m20220216_091122_add_user_id_to_cars.rs  m30220101_000001_insert_base_data.rs
rust-demo-core/: Cargo.toml
rust-demo-core/src/: lib.rs
rust-demo-core/src/common/: etc.rs  mod.rs
rust-demo-core/src/orm/: car.rs  mod.rs  user.rs
rust-demo-core/src/service/: car_service.rs  mod.rs  user_service.rs
rust-demo-core/src/util/: db_utils.rs  mod.rs
rust-demo-macros/: Cargo.toml
rust-demo-macros/src/: lib.rs
rust-demo-macros/src/derives/: generate_vo.rs  mod.rs
rust-demo-macros/tests/: ready.rs
src/: main.rs
src/controller/: car_controller.rs  mod.rs  user_controller.rs
src/middleware/: mod.rs
