[workspace]
members = [".", "rust-demo-core", "migration"]

[package]
name = "rust-demo"
version = "1.0.0"
edition = "2021"

[dependencies]
rust-demo-core = { path = "rust-demo-core" }
axum = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.53"
time = "0.3.7"
