[package]
name = "rust-demo-core"
version = "1.0.0"
edition = "2021"

[lib]
name = "rust_demo_core"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print" ], default-features = false }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.53"
async-trait = "0.1.52"
axum = "0.4"

[dependencies.serde_json]
version = "1.0"
features = ["raw_value"]


